# payments-connector-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  openapi.yaml  pyproject.toml  requirements.txt  security_analysis_report.md
.github/workflows/: ci.yml
docs/: simulator.md
examples/: local_payments_example.py  merchant_example.py
src/payments_sdk/: __init__.py  api.py  auth.py  services.py
src/payments_sdk/connectors/: __init__.py  base.py  simulator_connector.py  stripe_connector.py  template.py
src/payments_sdk/database/: __init__.py  models.py  repository.py  session.py
src/payments_sdk/database/migrations/: env.py
src/payments_sdk/database/migrations/versions/: 001_initial.py
src/payments_sdk/reconciliation/: __init__.py  api.py  cli.py  models.py  psp_fetcher.py  reconciler.py  report.py  service.py
tests/: __init__.py  conftest.py  test_api.py  test_basic.py  test_connector_base.py  test_database.py  test_error_handling.py  test_integration.py  test_local_payments.py  test_reconciliation.py  test_security.py  test_services.py  test_simulator.py  test_stripe_connector.py
