[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "payments-sdk"
version = "0.1.0"
description = "A payment connector SDK for integrating with payment providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.22",
    "pydantic>=2.4.0",
    "stripe>=5.0.0",
    "httpx>=0.24",
    "starlette>=0.40.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
